# wil

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/wil/: algebra.hpp  app.hpp  appimpl.hpp  buffer.hpp  cmdbuf.hpp  core.hpp  descriptor.hpp  device.hpp  display.hpp  drawsync.hpp  ecs.hpp  layer.hpp  log.hpp  model.hpp  pipeline.hpp  render.hpp  scene.hpp  texture.hpp  transform.hpp
shaders/: 3d.frag  3d.vert  light3d.frag  light3d.vert
src/: app.cpp  buffer.cpp  cmdbuf.cpp  descriptor.cpp  device.cpp  display.cpp  drawsync.cpp  layer.cpp  log.cpp  model.cpp  pipeline.cpp  render.cpp  scene.cpp  transform.cpp
tests/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
